# plapobot

./: LICENSE.md  app.py  pyproject.toml  template.py
templates/: vote_yml.j2
